--- a/index.html
+++ b/index.html
@@ -141,11 +141,19 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
+
+<li>$:/config/RelinkOnRename</li>
+
 <li>$:/core</li>
+
+<li>$:/DefaultTiddlers</li>
 
 <li>$:/isEncrypted</li>
 
 <li>$:/palette</li>
+
+<li>$:/palettes/Rocker</li>
 
 <li>$:/palettes/SolarizedDark</li>
 
@@ -155,15 +163,33 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/image-picker/system--1326338764</li>
+
+<li>$:/state/showeditpreview</li>
+
 <li>$:/state/ShowPaletteEditor</li>
 
 <li>$:/state/tab--1963855381</li>
+
+<li>$:/state/tab--659171093</li>
+
+<li>$:/state/tab-1204295125</li>
+
+<li>$:/state/tab-1504087711</li>
 
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab/moresidebar-1850697562</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
+
+<li>$:/state/toc/TableOfContents-Characters--565514155</li>
+
+<li>$:/state/toc/TableOfContents-Magic System--565514155</li>
+
+<li>$:/state/toc/TableOfContents-World of Veritona--565514155</li>
+
+<li>$:/state/toc/TableOfContents/World of Veritona-Nations--565514155</li>
 
 <li>$:/state/tree/$:/tags/</li>
 
@@ -181,9 +207,41 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>Aer</li>
+
+<li>Aqua</li>
+
 <li>Characters</li>
 
+<li>Empire of Elysia</li>
+
+<li>Glacias</li>
+
+<li>Ignus</li>
+
+<li>Kingdom of Siena</li>
+
+<li>Lux</li>
+
+<li>Magic System</li>
+
+<li>Nations</li>
+
+<li>Rorke Kaisei</li>
+
+<li>Sanito</li>
+
+<li>Sensum</li>
+
 <li>Table of Contents</li>
+
+<li>Terra</li>
+
+<li>Veritas</li>
+
+<li>Vis</li>
+
+<li>World of Veritona</li>
 
 </ul>
 </p>
@@ -199,6 +257,12 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20210217154244481" modified="20210217154244481" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
+<pre>show</pre>
+</div>
+<div created="20210217153737274" modified="20210217153737274" title="$:/config/RelinkOnRename">
+<pre>yes</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -10063,11 +10127,119 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20210217094306490" modified="20210217094312527" title="$:/DefaultTiddlers">
+<pre>Characters</pre>
+</div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20210217090748464" modified="20210217091736664" title="$:/palette">
+<div created="20210217090748464" modified="20210217151416002" title="$:/palette">
 <pre>$:/palettes/Twilight</pre>
+</div>
+<div created="20210217094646375" description="A dark theme" modified="20210217094651495" name="Rocker" tags="$:/tags/Palette" title="$:/palettes/Rocker" type="application/x-tiddler-dictionary">
+<pre>alert-background: #ffe476
+alert-border: #b99e2f
+alert-highlight: #881122
+alert-muted-foreground: #b99e2f
+background: #292929
+blockquote-bar: &lt;&lt;colour muted-foreground&gt;&gt;
+button-background: #1d1d1d
+button-foreground: #ffffff
+button-border: #303030
+code-background: #292929
+code-border: #4e4e4e
+code-foreground: #dd1144
+dirty-indicator: #ff925e
+download-background: #34c734
+download-foreground: &lt;&lt;colour background&gt;&gt;
+dragger-background: &lt;&lt;colour foreground&gt;&gt;
+dragger-foreground: &lt;&lt;colour background&gt;&gt;
+dropdown-background: &lt;&lt;colour background&gt;&gt;
+dropdown-border: &lt;&lt;colour muted-foreground&gt;&gt;
+dropdown-tab-background-selected: #fff
+dropdown-tab-background: #ececec
+dropzone-background: rgba(0,200,0,0.7)
+external-link-background-hover: inherit
+external-link-background-visited: inherit
+external-link-background: inherit
+external-link-foreground-hover: inherit
+external-link-foreground-visited: #0000aa
+external-link-foreground: #0000ee
+foreground: #a7a7a7
+message-background: #3b3b3b
+message-border: #373737
+message-foreground: #547599
+modal-backdrop: &lt;&lt;colour foreground&gt;&gt;
+modal-background: &lt;&lt;colour background&gt;&gt;
+modal-border: #373737
+modal-footer-background: #696969
+modal-footer-border: #3c3c3c
+modal-header-border: #373737
+muted-foreground: #707070
+notification-background: #ffffdd
+notification-border: #373737
+page-background: #161616
+pre-background: #161616
+pre-border: #373737
+primary: #ffffff
+sidebar-button-foreground: &lt;&lt;colour foreground&gt;&gt;
+sidebar-controls-foreground-hover: #000000
+sidebar-controls-foreground: #ffffff
+sidebar-foreground-shadow: rgba(255,255,255, 0.0)
+sidebar-foreground: #acacac
+sidebar-muted-foreground-hover: #444444
+sidebar-muted-foreground: #c0c0c0
+sidebar-tab-background-selected: #000
+sidebar-tab-background: &lt;&lt;colour tab-background&gt;&gt;
+sidebar-tab-border-selected: &lt;&lt;colour tab-border-selected&gt;&gt;
+sidebar-tab-border: &lt;&lt;colour tab-border&gt;&gt;
+sidebar-tab-divider: &lt;&lt;colour tab-divider&gt;&gt;
+sidebar-tab-foreground-selected: 
+sidebar-tab-foreground: &lt;&lt;colour tab-foreground&gt;&gt;
+sidebar-tiddler-link-foreground-hover: #ffbb99
+sidebar-tiddler-link-foreground: #9a9a9a
+site-title-foreground: &lt;&lt;colour tiddler-title-foreground&gt;&gt;
+static-alert-foreground: #b7b7b7
+tab-background-selected: #7e7e7e
+tab-background: #232323
+tab-border-selected: #666666
+tab-border: #373737
+tab-divider: #373737
+tab-foreground-selected: #ffffff
+tab-foreground: #a0a0a0
+table-border: #373737
+table-footer-background: #a8a8a8
+table-header-background: #f0f0f0
+tag-background: #ff925e
+tag-foreground: #ffffff
+tiddler-background: &lt;&lt;colour background&gt;&gt;
+tiddler-border: &lt;&lt;colour background&gt;&gt;
+tiddler-controls-foreground-hover: #888888
+tiddler-controls-foreground-selected: #444444
+tiddler-controls-foreground: #cccccc
+tiddler-editor-background: #f8f8f8
+tiddler-editor-border-image: #ffffff
+tiddler-editor-border: #373737
+tiddler-editor-fields-even: #e0e8e0
+tiddler-editor-fields-odd: #f0f4f0
+tiddler-info-background: #f8f8f8
+tiddler-info-border: #919191
+tiddler-info-tab-background: #f8f8f8
+tiddler-link-background: &lt;&lt;colour background&gt;&gt;
+tiddler-link-foreground: &lt;&lt;colour primary&gt;&gt;
+tiddler-subtitle-foreground: #c0c0c0
+tiddler-title-foreground: #ffffff
+toolbar-new-button: 
+toolbar-options-button: 
+toolbar-save-button: 
+toolbar-info-button: 
+toolbar-edit-button: 
+toolbar-close-button: 
+toolbar-delete-button: 
+toolbar-cancel-button: 
+toolbar-done-button: 
+untagged-background: #999999
+very-muted-foreground: #585858</pre>
 </div>
 <div created="20210217091706359" description="Precision dark colors for machines and people" license="MIT, Ethan Schoonover, https://github.com/altercation/solarized/blob/master/LICENSE" modified="20210217091722490" name="SolarizedDark" tags="$:/tags/Palette" title="$:/palettes/SolarizedDark" type="application/x-tiddler-dictionary">
 <pre>alert-background: #073642
@@ -10297,11 +10469,26 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
 <div created="20210217090353092" modified="20210217090354342" title="$:/SiteTitle">
 <pre>Veritona Wiki</pre>
 </div>
+<div created="20210217161851754" modified="20210217162115396" title="$:/state/image-picker/system--1326338764">
+<pre>show</pre>
+</div>
+<div created="20210217095121436" modified="20210217095121436" title="$:/state/showeditpreview">
+<pre>yes</pre>
+</div>
 <div created="20210217090805554" modified="20210217091029658" title="$:/state/ShowPaletteEditor">
 <pre>yes</pre>
 </div>
-<div created="20210217090745274" modified="20210217090747055" title="$:/state/tab--1963855381">
+<div created="20210217090745274" modified="20210217094606736" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
+</div>
+<div created="20210217095122448" modified="20210217095122448" title="$:/state/tab--659171093">
+<pre>Introduction</pre>
+</div>
+<div created="20210217095110840" modified="20210217095110840" title="$:/state/tab-1204295125">
+<pre>Introduction</pre>
+</div>
+<div created="20210217095422793" modified="20210217151235002" title="$:/state/tab-1504087711">
+<pre>Kingdom of Sienna</pre>
 </div>
 <div created="20210217090446336" modified="20210217090446540" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
@@ -10309,8 +10496,20 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
 <div created="20210217090705299" modified="20210217090705299" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20210217090440976" modified="20210217092905041" title="$:/state/tab/sidebar--595412856">
-<pre>Table of Contents</pre>
+<div created="20210217090440976" modified="20210217162724465" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
+</div>
+<div created="20210217093159602" modified="20210217093159602" title="$:/state/toc/TableOfContents-Characters--565514155">
+<pre>open</pre>
+</div>
+<div created="20210217161655024" modified="20210217161655024" title="$:/state/toc/TableOfContents-Magic System--565514155">
+<pre>open</pre>
+</div>
+<div created="20210217153759527" modified="20210217153759527" title="$:/state/toc/TableOfContents-World of Veritona--565514155">
+<pre>open</pre>
+</div>
+<div created="20210217153830608" modified="20210217153830608" title="$:/state/toc/TableOfContents/World of Veritona-Nations--565514155">
+<pre>open</pre>
 </div>
 <div created="20210217092239353" modified="20210217092239353" title="$:/state/tree/$:/tags/">
 <pre>show</pre>
@@ -10324,10 +10523,10 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210217090743389" list="Characters" modified="20210217092446890" title="$:/StoryList">
+<div created="20210217094937042" list="" modified="20210217162338412" title="$:/StoryList">
 <pre></pre>
 </div>
-<div created="20210217090449595" modified="20210217090458211" title="$:/theme">
+<div created="20210217090449595" modified="20210217094605859" title="$:/theme">
 <pre>$:/themes/tiddlywiki/vanilla</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -10439,16 +10638,120 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
     }
 }</pre>
 </div>
-<div created="20210217090421558" modified="20210217092901702" tags="TableOfContents" title="Characters">
+<div created="20210217161717834" modified="20210217161718513" tags="[[Magic System]]" title="Aer">
+<pre></pre>
+</div>
+<div created="20210217161711666" modified="20210217161712946" tags="[[Magic System]]" title="Aqua">
+<pre></pre>
+</div>
+<div created="20210217090421558" modified="20210217151240875" tags="TableOfContents" title="Characters">
+<pre>[[Rorke Kaisei]]</pre>
+</div>
+<div created="20210217153955873" modified="20210217154006896" tags="Nations" title="Empire of Elysia">
+<pre></pre>
+</div>
+<div created="20210217161701869" modified="20210217161702873" tags="[[Magic System]]" title="Glacias">
+<pre></pre>
+</div>
+<div created="20210217161653173" modified="20210217161653971" tags="[[Magic System]]" title="Ignus">
+<pre></pre>
+</div>
+<div created="20210217153828585" modified="20210217153829567" tags="Nations" title="Kingdom of Siena">
+<pre></pre>
+</div>
+<div created="20210217161759465" modified="20210217161800080" tags="[[Magic System]]" title="Lux">
+<pre></pre>
+</div>
+<div created="20210217154247550" modified="20210217161547450" tags="TableOfContents" title="Magic System">
+<pre>The Magic system of Veritona can be divided into 4 divisions. Temperature Magic, Oxygen Magic, Magnetism Magic and with the 4th being Lost Magic, a school of magic lost and misunderstood. 
+
+Ignoring the lost magic this can be further dived into a further 9 separate schools of magic. 
+
+| !Magic Type | !Attribute | !Name |
+| Temperature Magic | Fire        | [[Ignus   ]] |
+|~| Ice         | [[Glacias ]] |
+| Oxygen Magic      | Water       | [[Aqua    ]] |
+|~| Air         | [[Aer     ]] |
+|~| Healing     | [[Sanito  ]] |
+| Magnetism Magic   | Earth       | [[Terra   ]] |
+|~| Electricity | [[Vis     ]] |
+|~| Scout       | [[Sensum  ]] |
+|~| Light Magic | [[Lux     ]] |
+| Lost Magic | Quantum Manipulation | [[Veritas ]] |
+
+The distribution of this magic isn’t equal and or fairly distributed, amongst the nobles and upper echelons of the aristocracy there higher and purer forms of magic coalesce. For the lower classes, crude amounts of magic can be found. If it was to be compared, the average nobleman could with Ignus combust a person into flames, and the average person, light a match from their fingers for about only five seconds. With training and time, the average person could increase this capacity but never to the extent where they can compete with even the worst nobles. 
+
+The casting of this magic is propelled from the hands of the caster, crude forms of punishment against nobles who have rebelled include cutting off their hands. A punishment that is worse than death in some cases. Tools have been made to restrain a caster as a sort of handcuff mechanism where their hands are strapped to each other, sort of like intertwining fingers in prayer. As well as a handcuff that straps their hands to their heads, and any attempt to cast something could accidentally kill them. 
+
+Those who dedicate their entire lives to their magic will slowly be able to cast magic from any part of their body. Cruel and destructive mages exist where their hands have been cut off due to their actions but can still be as deadly as if they never lost their hands. Disarming these individuals are difficult and can be costly in lives using conventional non-magic approaches. 
+
+</pre>
+</div>
+<div created="20210217153635399" modified="20210217153817069" tags="[[World of Veritona]]" title="Nations">
+<pre></pre>
+</div>
+<div created="20210217093136691" modified="20210217162315093" tags="Characters" title="Rorke Kaisei">
+<pre>Rorke Kaisei, the primary protagonist of the story. He was playing games on his computer at the museum at which his family owns and operates when he was summoned against his will into the world of Veritona. He’s a strategy gamer, with his extensive knowledge of obscure military history and trivia is highly informed on the theoretical military procedures of an army but is marred by the real-world difficulties of trying to control an army.
+
+[img[images/RorkeTempt.png]]
+
+!!Allignment
+[[Kingdom of Sienna]]
+
+!!Physical Attributes
+
+|Height| Tall|
+|Shape| Average|
+|Build| Average|
+|Hair Style| Black|
+|Hair Colour| Brunnete|
+|Eyebrow| |
+|Eyes| Brown|
+|Face Shape| Heart-Shaped|
+|Nose| Average|
+|Glasses/lenses| |
+|Distinguishing marks| a mole on his right cheek|
+|Other words that might be used| adolescent, full-length, grandiloquent, immature, leggy, long-legged, stately, statuesque, tall, teen, teenage, teenaged, young|
+
+!! Characteristics
+|Positive Characteristics| Cunning, Creative|
+|Negative Characteristics| Doubtful|
+
+!!Biography
+
+!!!Early years
+Rorke grew up in a wealthy neighbourhood. After his mother died when he was young, he was raised by his father
+
+!!!Formative Years
+Rorke got his first job as a part time tea maker at age 16
+
+Rorke started college but quit part way through the course.
+</pre>
+</div>
+<div created="20210217161725421" modified="20210217161726082" tags="[[Magic System]]" title="Sanito">
+<pre></pre>
+</div>
+<div created="20210217161751703" modified="20210217161752284" tags="[[Magic System]]" title="Sensum">
 <pre></pre>
 </div>
 <div caption="Contents" created="20210217092709769" list-after="$:/core/ui/SideBar/Open" modified="20210217092853027" tags="$:/tags/SideBar" title="Table of Contents">
-<pre>
-&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'TableOfContents'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20210217161730696" modified="20210217161731230" tags="[[Magic System]]" title="Terra">
+<pre></pre>
+</div>
+<div created="20210217161805287" modified="20210217161805860" tags="[[Magic System]]" title="Veritas">
+<pre></pre>
+</div>
+<div created="20210217161739107" modified="20210217161739781" tags="[[Magic System]]" title="Vis">
+<pre></pre>
+</div>
+<div created="20210217153643681" modified="20210217153728308" tags="TableOfContents" title="World of Veritona">
+<pre>[[Kingdom of Siena]]</pre>
 </div>
 
 
