--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@ Error message and password prompt
 
 <li>$:/state/image-picker/system--1326338764</li>
 
+<li>$:/state/image-picker/system--347674739</li>
+
 <li>$:/state/showeditpreview</li>
 
 <li>$:/state/ShowPaletteEditor</li>
@@ -183,9 +185,15 @@ Error message and password prompt
 
 <li>$:/state/tab/sidebar--595412856</li>
 
+<li>$:/state/toc/TableOfContents-Characters--1876907615</li>
+
 <li>$:/state/toc/TableOfContents-Characters--565514155</li>
 
+<li>$:/state/toc/TableOfContents-Magic System--1876907615</li>
+
 <li>$:/state/toc/TableOfContents-Magic System--565514155</li>
+
+<li>$:/state/toc/TableOfContents-World of Veritona--1876907615</li>
 
 <li>$:/state/toc/TableOfContents-World of Veritona--565514155</li>
 
@@ -225,6 +233,8 @@ Error message and password prompt
 
 <li>Magic System</li>
 
+<li>Mythology</li>
+
 <li>Nations</li>
 
 <li>Rorke Kaisei</li>
@@ -236,6 +246,8 @@ Error message and password prompt
 <li>Table of Contents</li>
 
 <li>Terra</li>
+
+<li>The Supreme Order of the Arcanum</li>
 
 <li>Veritas</li>
 
@@ -10472,6 +10484,9 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
 <div created="20210217161851754" modified="20210217162115396" title="$:/state/image-picker/system--1326338764">
 <pre>show</pre>
 </div>
+<div created="20210217193439758" modified="20210217193440443" title="$:/state/image-picker/system--347674739">
+<pre>hide</pre>
+</div>
 <div created="20210217095121436" modified="20210217095121436" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
@@ -10496,13 +10511,22 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
 <div created="20210217090705299" modified="20210217090705299" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20210217090440976" modified="20210217162724465" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20210217090440976" modified="20210217193429146" title="$:/state/tab/sidebar--595412856">
+<pre>Table of Contents</pre>
+</div>
+<div created="20210217201522029" modified="20210217201522029" title="$:/state/toc/TableOfContents-Characters--1876907615">
+<pre>open</pre>
 </div>
 <div created="20210217093159602" modified="20210217093159602" title="$:/state/toc/TableOfContents-Characters--565514155">
 <pre>open</pre>
 </div>
+<div created="20210217201521199" modified="20210217201521199" title="$:/state/toc/TableOfContents-Magic System--1876907615">
+<pre>open</pre>
+</div>
 <div created="20210217161655024" modified="20210217161655024" title="$:/state/toc/TableOfContents-Magic System--565514155">
+<pre>open</pre>
+</div>
+<div created="20210217201520683" modified="20210217201520683" title="$:/state/toc/TableOfContents-World of Veritona--1876907615">
 <pre>open</pre>
 </div>
 <div created="20210217153759527" modified="20210217153759527" title="$:/state/toc/TableOfContents-World of Veritona--565514155">
@@ -10523,7 +10547,7 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210217094937042" list="" modified="20210217162338412" title="$:/StoryList">
+<div created="20210217193431787" list="Mythology [[Table of Contents]] [[Magic System]] [[Ignus   ]]" modified="20210217201836077" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210217090449595" modified="20210217094605859" title="$:/theme">
@@ -10647,8 +10671,8 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
 <div created="20210217090421558" modified="20210217151240875" tags="TableOfContents" title="Characters">
 <pre>[[Rorke Kaisei]]</pre>
 </div>
-<div created="20210217153955873" modified="20210217154006896" tags="Nations" title="Empire of Elysia">
-<pre></pre>
+<div created="20210217153955873" modified="20210217193745045" tags="Nations" title="Empire of Elysia">
+<pre>[img[images/elysia.jpg]]</pre>
 </div>
 <div created="20210217161701869" modified="20210217161702873" tags="[[Magic System]]" title="Glacias">
 <pre></pre>
@@ -10656,8 +10680,10 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
 <div created="20210217161653173" modified="20210217161653971" tags="[[Magic System]]" title="Ignus">
 <pre></pre>
 </div>
-<div created="20210217153828585" modified="20210217153829567" tags="Nations" title="Kingdom of Siena">
-<pre></pre>
+<div created="20210217153828585" modified="20210217193528494" tags="Nations" title="Kingdom of Siena">
+<pre>[img[images/siena.jpg]]
+
+</pre>
 </div>
 <div created="20210217161759465" modified="20210217161800080" tags="[[Magic System]]" title="Lux">
 <pre></pre>
@@ -10686,6 +10712,13 @@ The casting of this magic is propelled from the hands of the caster, crude forms
 Those who dedicate their entire lives to their magic will slowly be able to cast magic from any part of their body. Cruel and destructive mages exist where their hands have been cut off due to their actions but can still be as deadly as if they never lost their hands. Disarming these individuals are difficult and can be costly in lives using conventional non-magic approaches. 
 
 </pre>
+</div>
+<div created="20210217201439718" modified="20210217201555064" tags="TableOfContents" title="Mythology">
+<pre>!World Creation
+At the beginning there was the First Magi, and his magic was so great he had a mastery of all nine magic schools. His nine children each followed one of his magic schools and they all formed kingdoms of their own, the princess family is good at healing
+
+!Great Divide
+Prophecy states that summoning magic can bring forth great calamity, and when the stars align yet again, a hero will come and save them. But Church believes it will instead bring another calamity, King gives ancient scroll to daughter so she can learn of the summoning. &quot;The fate of everyone rests in this scroll&quot;. The second half of the prophecy is in the hands of the empire's heir. The Arcanum doesn't know of one half of the prophecy</pre>
 </div>
 <div created="20210217153635399" modified="20210217153817069" tags="[[World of Veritona]]" title="Nations">
 <pre></pre>
@@ -10743,6 +10776,18 @@ Rorke started college but quit part way through the course.
 </div>
 <div created="20210217161730696" modified="20210217161731230" tags="[[Magic System]]" title="Terra">
 <pre></pre>
+</div>
+<div created="20210217194656174" modified="20210217200732186" tags="Nations" title="The Supreme Order of the Arcanum">
+<pre>!The Arcanum Organisation
+| !Current Title | !Auxiliary Title |
+| Arch Magi | The Patriarch |
+| Grand Magi | Justiciar |
+| Major Magi | Elector  |
+| Great Magi | Advocate |
+| Magi | Confessor |
+
+!The Sentinel Order
+</pre>
 </div>
 <div created="20210217161805287" modified="20210217161805860" tags="[[Magic System]]" title="Veritas">
 <pre></pre>
