--- a/index.html
+++ b/index.html
@@ -10139,8 +10139,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210217094306490" modified="20210217094312527" title="$:/DefaultTiddlers">
-<pre>Characters</pre>
+<div created="20210217094306490" modified="20210218053803241" title="$:/DefaultTiddlers">
+<pre>Characters
+[[World of Veritona]]</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -10505,13 +10506,13 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
 <div created="20210217095422793" modified="20210217151235002" title="$:/state/tab-1504087711">
 <pre>Kingdom of Sienna</pre>
 </div>
-<div created="20210217090446336" modified="20210217090446540" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20210217090446336" modified="20210218053746843" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210217090705299" modified="20210217090705299" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20210217090440976" modified="20210217193429146" title="$:/state/tab/sidebar--595412856">
+<div created="20210217090440976" modified="20210218053752365" title="$:/state/tab/sidebar--595412856">
 <pre>Table of Contents</pre>
 </div>
 <div created="20210217201522029" modified="20210217201522029" title="$:/state/toc/TableOfContents-Characters--1876907615">
@@ -10547,7 +10548,7 @@ very-muted-foreground: rgba(240, 196, 117, 0.7)</pre>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210217193431787" list="Mythology [[Table of Contents]] [[Magic System]] [[Ignus   ]]" modified="20210217201836077" title="$:/StoryList">
+<div list="Characters [[World of Veritona]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210217090449595" modified="20210217094605859" title="$:/theme">
